# ChangeLog for dev-util/subversion
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.116 2004/11/05 21:25:52 agriffis Exp $

  05 Nov 2004; Aron Griffis <agriffis@gentoo.org> subversion-1.0.9.ebuild:
  Remove attempted installation of cvs2svn #47099

  04 Nov 2004; Aron Griffis <agriffis@gentoo.org> subversion-1.0.9.ebuild,
  subversion-1.1.0.ebuild:
  add ia64 keywords

  01 Nov 2004; Markus Rothe <corsair@gentoo.org>

  subversion-1.1.0.ebuild:
  Marked ~ppc64; bug #63683

  21 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> subversion-1.0.9.ebuild:
  Backport the svn-revision.txt fix

  19 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> subversion-1.1.0.ebuild:
  Explicitly enable or disable javahl to fix bug #67681

  19 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> subversion-1.1.0.ebuild:
  Fix missing quotes problem in combination with jikes. Thanks to 
  snikkt@yahoo.com in bug #63464 for signalling this.

*subversion-1.0.9 (19 Oct 2004)

  19 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> +subversion-1.0.9.ebuild:
  A new upstream version that fixes some slowness with "svn ls"

  09 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> subversion-1.1.0.ebuild:
  Fix bug #63464 on compilation with jikes.

  08 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> subversion-1.1.0.ebuild:
  Fix bug #66659 concerning the name of the book file. Why doesn't dohtml 
  complain when a file doesn't exist?

  08 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> +files/subversion-1.1.0-build.patch,
  -files/subversion-1.1.0-rc4-build.patch, subversion-1.1.0.ebuild:
  The previous fix was not applied. Also fix bug #66644 by broadening the 
  sed script that hacks around the svnversion stuff (the output is 
  constant)

  08 Oct 2004; Paul de Vrieze <pauldv@gentoo.org> files/subversion-1.1.0-rc4-build.patch:
  Fix javahl linking (again) to fix bug #66625, this fix comes from rc2
