@@ -1,15 +1,17 @@
-MD5 306adb95f02efe1978a74099d278bcb5 ChangeLog 19833
+MD5 a241aa80cc0ddd74293e1ebd7442379f ChangeLog 19949
 MD5 8fbcd267012fd1eef74d5161888cc7b8 metadata.xml 222
-MD5 ecd763525d0c57232e2a80efe9f29437 subversion-1.1.0.ebuild 9234
-MD5 76fbed9ef27746928125c0403de48f6c subversion-1.0.9.ebuild 9589
 MD5 1b9acc042ae6c0b58071cf9ea8adc57a subversion-0.27.0.ebuild 7880
 MD5 5cff2e6d2191553c86d931e5240ba23a subversion-0.32.1.ebuild 8136
+MD5 ecd763525d0c57232e2a80efe9f29437 subversion-1.1.0.ebuild 9234
+MD5 76fbed9ef27746928125c0403de48f6c subversion-1.0.9.ebuild 9589
+MD5 23946afa80c04a1d40ff6a0b3f2f3ef4 subversion-1.1.1.ebuild 9218
 MD5 614fa934711031d1ecfb0b9fa3107d6b subversion-1.0.8.ebuild 9719
 MD5 4fd39b311d09602c93a9ff0aceaf8596 files/70svn-gentoo.el 136
-MD5 257be4b439c371b285685b3be0e17568 files/digest-subversion-1.1.0 70
-MD5 b355b623d5259b4b1ff75eead17fac0b files/digest-subversion-1.0.9 70
-MD5 69cf99186dd88a6b26c6c121fc4c16a9 files/digest-subversion-0.32.1 132
 MD5 e232822bee0a8ed00f6b9d7805b83307 files/digest-subversion-0.27.0 132
+MD5 69cf99186dd88a6b26c6c121fc4c16a9 files/digest-subversion-0.32.1 132
 MD5 ce6f3698724b55cf49e647727207cca5 files/subversion-db4.patch 563
 MD5 062d550a01e930b20be035b5616cadbe files/subversion-1.1.0-build.patch 771
+MD5 b355b623d5259b4b1ff75eead17fac0b files/digest-subversion-1.0.9 70
+MD5 53809180b5372b204b32db3962b409ba files/digest-subversion-1.1.1 70
 MD5 87d4c36172feaa28b4be6158906f3644 files/digest-subversion-1.0.8 70
+MD5 257be4b439c371b285685b3be0e17568 files/digest-subversion-1.1.0 70
